--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,6 +21,7 @@
         <td><%= todo.text %></td>
         <td><%= todo.done ? 'ano' : 'ne' %></td>
         <td>
+          <a href="/detail/<%= todo.id %>">Detail</a>
           <% if (todo.done) { %>
           <a href="/toggle/<%= todo.id %>">Nehotovo</a>
           <a href="/delete/<%= todo.id %>">Odstranit</a>
