--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,10 @@
   <body>
     <h1><%= title %></h1>
 
+    <a href="?done=true">Hotové</a>
+    <a href="?done=false">Nehotové</a>
+    <a href="?">Všechny</a>
+
     <table>
       <tr>
         <th>Text</th>
