--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,45 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title><%= title %></title>
-  </head>
-  <body>
-    <h1><%= title %></h1>
+</head>
+<body>
+<h1><%= title %></h1>
 
-    <a href="?done=true">Hotové</a>
-    <a href="?done=false">Nehotové</a>
-    <a href="?">Všechny</a>
+<a href="?done=true">Hotové</a>
+<a href="?done=false">Nehotové</a>
+<a href="?">Všechny</a>
 
-    <table>
-      <tr>
-        <th>Text</th>
-        <th>Hotovo</th>
-        <th>Akce</th>
-      </tr>
+<div id="todosTable">
+    <%- include('_todos.ejs') %>
+</div>
 
-      <% for (const todo of todos) { %>
-      <tr>
-        <td><%= todo.text %></td>
-        <td><%= todo.done ? 'ano' : 'ne' %></td>
-        <td>
-          <a href="/detail/<%= todo.id %>">Detail</a>
-          <% if (todo.done) { %>
-          <a href="/toggle/<%= todo.id %>">Nehotovo</a>
-          <a href="/delete/<%= todo.id %>">Odstranit</a>
-          <% } else { %>
-          <a href="/toggle/<%= todo.id %>">Hotovo</a>
-          <% } %>
-        </td>
-      </tr>
-      <% } %>
-    </table>
+<form action="/add" method="post">
+    <input type="text" name="text"/>
+    <button type="submit">Přidat ToDo!</button>
+</form>
 
-    <form action="/add" method="post">
-      <input type="text" name="text" />
-      <button type="submit">Přidat ToDo!</button>
-    </form>
-  </body>
+<script>
+  const ws = new WebSocket('ws://localhost:3000');
+
+  ws.addEventListener('message', (message) => {
+    const messageData = JSON.parse(message.data)
+
+    if (messageData.type === 'allTodos') {
+      document.getElementById('todosTable').innerHTML = messageData.html;
+    }
+  });
+</script>
+</body>
 </html>
